--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/dominickp/handwriting.io#readme",
   "dependencies": {
+    "cli-table2": "^0.1.9",
     "gulp": "^3.9.0",
     "handwriting.io": "^0.1.0",
     "j": "^0.4.3",
+    "json-table": "^0.1.3",
     "yargs": "^3.32.0"
   },
   "devDependencies": {
